Fix N+1 queries, add SSN encryption, local JWKS auth, updatedAt, and indexes
- Batch load emergency contacts and certifications with IN clause instead
  of per-record queries on search
- Encrypt SSN at rest with AES-256-GCM, mask in API responses
- Replace Okta userinfo network call with local JWKS signature validation
  (keys cached 1 hour)
- Add updatedAt column via V6 migration, set on every update
- Add indexes on department, status, and name columns
- Clamp search pagination: page >= 0, size 1-100
- Sync child records on update (upsert by ID) instead of delete-and-reinsert
- Add missing validation: relationship, issuingBody, issueDate
- Add id field to EmergencyContactRequest and CertificationRequest for upserts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>